# sushi-allergy-parser

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
src/sushi_allergy_parser/: __init__.py  base.py  kura.py  sushiro.py  util.py
tests/: test_sushi_allergy_parser.py
