[tool.poetry]
name = "sushi-allergy-parser"
version = "0.1.0"
description = ""
authors = ["t3yamoto <3yamoto.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tabula-py = "^1.4"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = { version="*", allows-prereleases = true }
pylint = "^2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
